// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Goes to edit mode, handles input and calls action prop 1`] = `
.emotion-0 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  height: 50px;
  margin-left: auto;
  padding: 0 13px;
  white-space: nowrap;
  font-size: 1.1rem;
  background: linear-gradient( rgba(226,226,226,0.1),#507aa4 50%,rgba(226,226,226,0.1) 100% );
}

.emotion-0:hover,
.emotion-0:focus {
  color: white;
  background-color: #184673;
  border: 2px solid rgba(32,88,143,0);
  -webkit-transform: translateY(1px) translateX(1px);
  -ms-transform: translateY(1px) translateX(1px);
  transform: translateY(1px) translateX(1px);
}

.emotion-0:active {
  -webkit-transform: translateY(2px) translateX(2px);
  -ms-transform: translateY(2px) translateX(2px);
  transform: translateY(2px) translateX(2px);
}

.emotion-0[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
  -webkit-transform: translateY(0) translateX(0);
  -ms-transform: translateY(0) translateX(0);
  transform: translateY(0) translateX(0);
}

.emotion-0:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:disabled,
.emotion-0:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  border: none;
}

.emotion-0:focus {
  outline-width: medium;
}

.emotion-0:hover {
  color: white;
}

<button
  class="emotion-0 emotion-1"
  data-testid="AddSubjectButton"
  type="button"
>
  <svg
    class="c-icon"
    data-license="Apache License 2.0"
    data-source="Material Design"
    fill="currentColor"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style="vertical-align: middle;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Plus
    </title>
    <g>
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </g>
  </svg>
  Test
</button>
`;

exports[`Goes to edit mode, handles input and calls action prop 2`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  margin-left: auto;
  position: absolute;
  right: 0;
}

.emotion-4 svg {
  height: 38px;
  width: 38px;
}

.emotion-0 {
  margin: calc(13px / 2);
}

.emotion-2 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-2:hover,
.emotion-2:focus {
  color: white;
  background-color: #184673;
  border: 2px solid rgba(32,88,143,0);
  -webkit-transform: translateY(1px) translateX(1px);
  -ms-transform: translateY(1px) translateX(1px);
  transform: translateY(1px) translateX(1px);
}

.emotion-2:active {
  -webkit-transform: translateY(2px) translateX(2px);
  -ms-transform: translateY(2px) translateX(2px);
  transform: translateY(2px) translateX(2px);
}

.emotion-2[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
  -webkit-transform: translateY(0) translateX(0);
  -ms-transform: translateY(0) translateX(0);
  transform: translateY(0) translateX(0);
}

.emotion-2:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-2:hover,
.emotion-2:active,
.emotion-2:disabled,
.emotion-2:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  border: none;
}

.emotion-2:focus {
  outline-width: medium;
}

.emotion-2,
.emotion-2:hover {
  background-color: #4d4d4d;
  color: white;
  min-width: 50px;
  height: 50px;
}

<div
  class="emotion-4 emotion-5"
>
  <input
    class="emotion-0 emotion-1"
    data-testid="addSubjectInputField"
    type="text"
    value="Elefant"
  />
  <button
    class="emotion-2 emotion-3"
    type="button"
  >
    <svg
      class="c-icon"
      data-license="Apache License 2.0"
      data-source="Material Design"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style="vertical-align: middle;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <title>
        Done
      </title>
      <g>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`Goes to edit mode, handles input and calls action prop 3`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  margin-left: auto;
  position: absolute;
  right: 0;
}

.emotion-6 svg {
  height: 38px;
  width: 38px;
}

.emotion-0 {
  margin: calc(13px / 2);
}

.emotion-4 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-4:hover,
.emotion-4:focus {
  color: white;
  background-color: #184673;
  border: 2px solid rgba(32,88,143,0);
  -webkit-transform: translateY(1px) translateX(1px);
  -ms-transform: translateY(1px) translateX(1px);
  transform: translateY(1px) translateX(1px);
}

.emotion-4:active {
  -webkit-transform: translateY(2px) translateX(2px);
  -ms-transform: translateY(2px) translateX(2px);
  transform: translateY(2px) translateX(2px);
}

.emotion-4[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
  -webkit-transform: translateY(0) translateX(0);
  -ms-transform: translateY(0) translateX(0);
  transform: translateY(0) translateX(0);
}

.emotion-4:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-4:hover,
.emotion-4:active,
.emotion-4:disabled,
.emotion-4:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  border: none;
}

.emotion-4:focus {
  outline-width: medium;
}

.emotion-4,
.emotion-4:hover {
  background-color: #4d4d4d;
  color: white;
  min-width: 50px;
  height: 50px;
}

.emotion-2 {
  border: 0.4em solid #e8e3e3;
  border-bottom-color: #20588f;
  border-radius: 50%;
  margin: 0 auto;
  width: 3em;
  height: 3em;
  -webkit-animation: animation-0 0.7s linear infinite;
  animation: animation-0 0.7s linear infinite;
  width: 1em;
  height: 1em;
}

<div
  class="emotion-6 emotion-7"
>
  <input
    class="emotion-0 emotion-1"
    data-testid="addSubjectInputField"
    type="text"
    value="Elefant"
  />
  <button
    class="emotion-4 emotion-5"
    disabled=""
    type="button"
  >
    <div
      class="emotion-2 emotion-3"
    />
  </button>
</div>
`;
